--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <script type="text/javascript" nonce="d4c9a24e3e5a4259a47b0d0bb3d" src="//local.adguard.org?ts=1659978290006&amp;type=content-script&amp;dmn=getbootstrap.com&amp;app=com.google.Chrome&amp;css=3&amp;js=1&amp;rel=1&amp;rji=1&amp;sbe=1"></script>
+    <script type="text/javascript" nonce="d4c9a24e3e5a4259a47b0d0bb3d" src="//local.adguard.org?ts=1659978290006&amp;type=content-script&amp;dmn=freshkomfarm.netlify.app&amp;app=com.google.Chrome&amp;css=3&amp;js=1&amp;rel=1&amp;rji=1&amp;sbe=1"></script>
 <script type="text/javascript" nonce="d4c9a24e3e5a4259a47b0d0bb3d" src="//local.adguard.org?ts=1659978290006&amp;name=AdGuard%20Extra%20%28Beta%29&amp;type=user-script"></script><link rel="icon" href="favicon.svg">
 
     <title>Freshkom</title>
